Challenges/challenge_2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xss
  template:
    metadata:
      labels:
        app: xss
    spec:
      containers:
        - name: xss
          image: yvesei/challenge2:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: xss
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
  selector:
    app: xss
